Closed Bug 145309 Opened 24 years ago Closed 23 years ago

[turbo] On exit after unloading accts we are again loading accts because we are rebuilding tree

Categories

(Core :: XUL, defect, P3)

x86
Windows NT
defect

Tracking

()

RESOLVED FIXED
Future

People

(Reporter: naving, Assigned: waterson)

Details

Attachments

(2 files)

waterson, I'm assigning this bug to you. You can reassign it back to me if you are not the right owner. To reproduce this bug. 1. you need the patch. I'll attach it. 2. Launch mail. 3. Go in turbo mode 4. File | Exit Acutal : After unloading accts, xulTreeBuilder is again rebuilding tree on exit Expected: We should not be rebuilding tree after session-logout notification nsMsgAccountManager::LoadAccounts(nsMsgAccountManager * const 0x0304adc8) line 1300 nsMsgAccountManager::GetAllServers(nsMsgAccountManager * const 0x0304adc8, nsISupportsArray * * 0x0012d780) line 1243 + 12 bytes nsMsgAccountManagerDataSource::createRootResources(nsIRDFResource * 0x01dee0b0, nsISupportsArray * 0x030f35f0) line 597 + 47 bytes nsMsgAccountManagerDataSource::GetTargets(nsMsgAccountManagerDataSource * const 0x03cb7ca0, nsIRDFResource * 0x0304c120, nsIRDFResource * 0x01dee0b0, int 1, nsISimpleEnumerator * * 0x031db3e8) line 574 + 21 bytes CompositeAssertionEnumeratorImpl::GetEnumerator(nsIRDFDataSource * 0x03cb7ca0, nsISimpleEnumerator * * 0x031db3e8) line 573 + 37 bytes CompositeEnumeratorImpl::HasMoreElements(CompositeEnumeratorImpl * const 0x031db3d8, int * 0x0012db88) line 239 + 22 bytes nsRDFConMemberTestNode::FilterInstantiations(InstantiationSet & {...}, void * 0x0012e018) line 389 + 42 bytes TestNode::Propagate(const InstantiationSet & {...}, void * 0x0012e018) line 1044 + 19 bytes TestNode::Propagate(const InstantiationSet & {...}, void * 0x0012e018) line 1054 RootNode::Propagate(const InstantiationSet & {...}, void * 0x0012e018) line 760 + 30 bytes nsXULTreeBuilder::OpenSubtreeOf(nsTreeRows::Subtree * 0x00000000, nsIRDFResource * 0x0012e094, int * 0x001a2667) line 1615 nsXULTreeBuilder::OpenContainer(int 3080192, nsIRDFResource * 0x02ff0c88) line 1569 nsXULTreeBuilder::Rebuild(nsXULTreeBuilder * const 0x002f0000) line 1075 nsXULTreeBuilder::SetTree(nsXULTreeBuilder * const 0x002f0000, nsITreeBoxObject * 0xc0000000) line 834 nsTreeBoxObject::SetDocument(nsTreeBoxObject * const 0x00000040, nsIDocument * 0x00000010) line 87 nsXULDocument::SetBoxObjectFor(nsXULDocument * const 0x00000020, nsIDOMElement * 0x00130560, nsIBoxObject * 0x00130560) line 6887 nsXULElement::SetDocument(nsXULElement * const 0x03c47628, nsIDocument * 0x0534da00, int 3080192, int 15) line 2066 nsXULElement::SetDocument(nsXULElement * const 0x40000003, nsIDocument * 0x00000000, int 1244420, int 3080192) line 2134 nsXULElement::SetDocument(nsXULElement * const 0x000000fe, nsIDocument * 0xc0000000, int 2012951904, int 3081736) line 2134 nsXULElement::SetDocument(nsXULElement * const 0x0012fdf0, nsIDocument * 0x002f0000, int 3080896, int 2012842704) line 2134 nsXULDocument::SetScriptGlobalObject(nsXULDocument * const 0x00000000, nsIScriptGlobalObject * 0x77fb80db) line 1635 DocumentViewerImpl::Close(DocumentViewerImpl * const 0x00000000) line 1621 nsDocShell::Destroy(nsDocShell * const 0x77fb80db) line 2713 nsWebShell::Destroy(nsWebShell * const 0x0012e7bc) line 1264 nsXULWindow::Destroy(nsXULWindow * const 0x00000000) line 396 nsWebShellWindow::Destroy(nsWebShellWindow * const 0x77fca4cb) line 1739 + 9 bytes nsChromeTreeOwner::Destroy(nsChromeTreeOwner * const 0x03c294b8) line 230 GlobalWindowImpl::ReallyCloseWindow(GlobalWindowImpl * const 0x002f0000) line 3030 GlobalWindowImpl::CloseWindow(nsISupports * 0x77fa6c29) line 4167 nsJSContext::ScriptEvaluated(nsJSContext * const 0x77f902ed, int 304) line 1477 + 18 bytes nsJSContext::CallEventHandler(nsJSContext * const 0x0012e8d8, void * 0x0012e8d4, void * 0x0012e890, unsigned int 268461183, void * 0x0012e8d4, int * 0x0012e89c, int 268462239) line 1050 nsJSEventListener::HandleEvent(nsJSEventListener * const 0x00000005, nsIDOMEvent * 0x0012ea54) line 182 + 77 bytes nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x0012ec34, nsIDOMEvent * 0x0012ec34, nsIDOMEventTarget * 0x0012ec30, unsigned int 1240020, unsigned int 269143112) line 1219 + 20 bytes nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x002f0000, nsIPresContext * 0x77fcb30b, nsEvent * 0x0398dbb0, nsIDOMEvent * * 0x00001250, nsIDOMEventTarget * 0xfeeefeee, unsigned int 52902984, nsEventStatus * 0x77fcc85a) line 2209 + 36 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x00000001, nsIPresContext * 0x005bfd6c, nsEvent * 0x00010001, nsIDOMEvent * * 0x00000000, unsigned int 2012971227, nsEventStatus * 0x02f58440) line 3447 PresShell::HandleDOMEventWithTarget(PresShell * const 0x77e94c28, nsIContent * 0xffffffff, nsEvent * 0x0012f424, nsEventStatus * 0x0012f2fc) line 6033 + 36 bytes nsMenuFrame::Execute() line 1679 nsMenuFrame::HandleEvent(nsMenuFrame * const 0xffffffff, nsIPresContext * 0x0012f59c, nsGUIEvent * 0x0019dfc4, nsEventStatus * 0x002f0000) line 486 PresShell::HandleEventInternal(nsEvent * 0x01f26148, nsIView * 0x77f902bd, unsigned int 2012807917, nsEventStatus * 0x00000060) line 6001 + 38 bytes PresShell::HandleEvent(PresShell * const 0x0012f62c, nsIView * 0x03604f0f, nsGUIEvent * 0x02fb1db0, nsEventStatus * 0x0012f6e0, int 1242900, int & -13597301) line 5909 + 25 bytes nsViewManager::HandleEvent(nsView * 0x03603522, nsGUIEvent * 0x00000104, int 32661824) line 2076 nsView::HandleEvent(nsViewManager * 0x03610703, nsGUIEvent * 0x00000f3c, int 1032357892) line 306 nsViewManager::DispatchEvent(nsViewManager * const 0x02ff06c0, nsGUIEvent * 0x0012f8cc, nsEventStatus * 0x0012f7c8) line 1881 + 23 bytes HandleEvent(nsGUIEvent * 0x0012f801) line 83 nsWindow::DispatchEvent(nsWindow * const 0x00000001, nsGUIEvent * 0x020364c4, nsEventStatus &) line 889 + 10 bytes nsWindow::DispatchWindowEvent(nsGUIEvent * 0x03ebf4fc) line 910 nsWindow::DispatchMouseEvent(unsigned int 3080192, unsigned int 32661824, nsPoint * 0x00000000) line 4754 + 21 bytes ChildWindow::DispatchMouseEvent(unsigned int 2012773192, unsigned int 32661824, nsPoint * 0x002f0000) line 5011 nsWindow::ProcessMessage(unsigned int 805462114, unsigned int 5, long 0, long * 0x00302960) line 3624 + 28 bytes nsWindow::WindowProc(HWND__ * 0x0012fd1c, unsigned int 268966609, unsigned int 3109320, long 0) line 1154 + 27 bytes USER32! 77e13eb0() USER32! 77e1401a() USER32! 77e192da() nsAppShellService::Run(nsAppShellService * const 0x01800fd8) line 451 main1(int 4, char * * 0x003047d0, nsISupports * 0x00000000) line 1456 + 32 bytes main(int 4, char * * 0x003047d0) line 1805 + 37 bytes mainCRTStartup() line 338 + 17 bytes KERNEL32! 77e87903()
The bug description is not very helpful (to me at least), but perhaps it describes what i'm seeing as well: build 2002051608, configured with only DEFAULT profile, Win XP Pro. 1. launch mozilla -mail -> works fine 2. after killing all moz (including QuickLaunch), launch mozilla (the browser) -> some error messages pop up and one needs to select a profile 3. kill the browser but keep QuickLaunch open. Select to open a navigator session -> again one needs to select a profile
installed/uninstalled a few builds and the behaviour i described was introduced somewhere between builds 2002051408 and 1508
Attached patch fix?Splinter Review
naving: could you try the attached patch? This should fix the problem and allow us to teardown gracefully.
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.0.1
yes, I'll try your fix.
waterson, your patch does fix the problem for me. thx
Target Milestone: mozilla1.0.1 → mozilla1.1beta
Target Milestone: mozilla1.1beta → Future
Shouldnt' we at least check this fix in on the trunk?
Attachment #84969 - Flags: superreview?(hewitt)
Attachment #84969 - Flags: review?(varga)
Attachment #84969 - Flags: review?(varga) → review+
Attachment #84969 - Flags: superreview?(hewitt) → superreview?(jaggernaut)
Comment on attachment 84969 [details] [diff] [review] fix? sr=jag
Attachment #84969 - Flags: superreview?(jaggernaut) → superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: XUL → XUL
QA Contact: shrir → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: