Fix for bug 145309. [turbo] On exit after unloading accts we are again loading accts because we are rebuilding tree r=varga, sr=jag, patch by waterson